# clevis

./: .packit.yaml  meson.build  meson_options.txt
src/luks/: clevis-luks-common-functions.in  meson.build
src/luks/dracut/: meson.build
src/luks/systemd/: clevis-luks-askpass.service.in  meson.build
src/luks/tests/: list-recursive-luks1  list-recursive-luks2
src/pins/: meson.build
src/pins/pkcs11/: clevis-encrypt-pkcs11  meson.build
src/pins/pkcs11/tests/: meson.build  pkcs11-id-parsing
src/pins/tpm1/: meson.build
